adding docker, ansible and terraform files

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,19 +1,19 @@
-# Use a lightweight Node.js image
-FROM node:20.18.2
+# Node.js image
+FROM node:20-alpine
 
 # Set the working directory
 WORKDIR /app
 
-# Copy package.json and package-lock.json first (Leverage Docker layer caching)
+# Copy package.json and package-lock.json 
 COPY package.json package-lock.json ./
 
-# Install dependencies (omit dev dependencies if not needed)
+# Install dependencies 
 RUN npm install 
 
-# Copy the rest of the application code
+# Copy the application code
 COPY . .
 
-# Expose the port Vite runs on (default is 5173 for preview mode)
+# Expose the port 
 EXPOSE 5173
 
 # Set environment variables for production
@@ -22,5 +22,5 @@ ENV NODE_ENV=production
 # Build the frontend
 RUN npm run build
 
-# Start the frontend using Vite's built-in preview server
+# Start the frontend 
 CMD ["npm", "run", "preview"]
