--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,24 +1,24 @@
 
-# Use the exact Node.js version as local environment
-FROM node:20.18.2
+#  Node.js image
+FROM node:20-alpine
 
 # Set the working directory
 WORKDIR /app
 
-# Copy package.json and package-lock.json first (Leverage Docker layer caching)
+# Copy package.json and package-lock.json 
 COPY package.json package-lock.json ./
 
-# Install only production dependencies
+# Install dependencies
 RUN npm install 
 
-# Copy the rest of the application code
+# Copy the application code
 COPY . .
 
-# Expose the port the app runs on
+# Expose the port
 EXPOSE 5000
 
 # Set environment variables for production
 ENV NODE_ENV=production
 
-# Start the application directly (avoid using nodemon in production)
+# Start the application 
 CMD ["npm", "start"]
