--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -1,13 +1,19 @@
----
 - name: Deploy to EC2
   hosts: all
   become: yes
+  vars:
+    ansible_ssh_timeout: 60  # Set SSH timeout
+
   tasks:
 
     # Step 1: Update packages
     - name: Update Packages
       apt:
         update_cache: yes
+      retries: 3
+      delay: 5
+      register: update_result
+      until: update_result is success
 
     # Step 2: Install required dependencies for Docker installation
     - name: Install required dependencies
@@ -18,22 +24,38 @@
           - curl
           - software-properties-common
         state: present
+      retries: 3
+      delay: 5
+      register: install_deps
+      until: install_deps is success
 
     # Step 3: Add Docker's official GPG key
     - name: Add Docker's official GPG key
       shell: |
         curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+      retries: 3
+      delay: 5
+      register: docker_key
+      until: docker_key is success
 
     # Step 4: Add Docker repository
     - name: Add Docker repository
       shell: |
         add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+      retries: 3
+      delay: 5
+      register: add_docker_repo
+      until: add_docker_repo is success
 
     # Step 5: Install Docker CE
     - name: Install Docker CE
       apt:
         name: docker-ce
         state: present
+      retries: 3
+      delay: 5
+      register: install_docker
+      until: install_docker is success
 
     # Step 6: Install Docker Compose
     - name: Install Docker Compose
@@ -41,6 +63,10 @@
         url: "https://github.com/docker/compose/releases/latest/download/docker-compose-{{ ansible_system }}-{{ ansible_machine }}"
         dest: "/usr/local/bin/docker-compose"
         mode: '0755'
+      retries: 3
+      delay: 5
+      register: install_compose
+      until: install_compose is success
 
     # Step 7: Ensure Docker service is running
     - name: Ensure Docker service is running
@@ -48,6 +74,10 @@
         name: docker
         state: started
         enabled: yes
+      retries: 3
+      delay: 5
+      register: docker_service
+      until: docker_service is success
 
     # Step 8: Create directories for app
     - name: Create app directories
@@ -79,6 +109,8 @@
 
     # Step 10: Run Docker Compose to deploy containers
     - name: Run Docker Compose to deploy containers
-      community.docker.docker_compose:
+      community.docker.docker_compose_v2:
         project_src: /home/ubuntu/app
         state: present
+      retries: 3
+      delay: 5
