add bat command to jenkins file

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
         }
         stage('Build Docker Images with Docker Compose') {
             steps {
-                sh "docker-compose -f ${DOCKER_COMPOSE_FILE} build"
+                bat "wsl docker-compose -f ${DOCKER_COMPOSE_FILE} build"
             }
         }
         stage('Push Docker Images') {
@@ -23,12 +23,12 @@ pipeline {
                 script {
                     withCredentials([usernamePassword(credentialsId: 'docker-hub-credentials', 
                         usernameVariable: 'DOCKER_HUB_USERNAME', passwordVariable: 'DOCKER_HUB_PASSWORD')]) {
-                        sh "echo \$DOCKER_HUB_PASSWORD | docker login -u \$DOCKER_HUB_USERNAME --password-stdin"
-                        def gitCommitHash = sh(script: 'git rev-parse --short HEAD', returnStdout: true).trim()
-                        sh "docker tag mern-ecommerce-ci-frontend \$DOCKER_HUB_USERNAME/frontend:${gitCommitHash}"
-                        sh "docker tag mern-ecommerce-ci-backend \$DOCKER_HUB_USERNAME/backend:${gitCommitHash}"
-                        sh "docker push \$DOCKER_HUB_USERNAME/frontend:${gitCommitHash}"
-                        sh "docker push \$DOCKER_HUB_USERNAME/backend:${gitCommitHash}"
+                        bat "wsl bash -c \"echo %DOCKER_HUB_PASSWORD% | docker login -u %DOCKER_HUB_USERNAME% --password-stdin\""
+                        def gitCommitHash = bat(script: 'wsl git rev-parse --short HEAD', returnStdout: true).trim()
+                        bat "wsl docker tag mern-ecommerce-ci-frontend %DOCKER_HUB_USERNAME%/frontend:${gitCommitHash}"
+                        bat "wsl docker tag mern-ecommerce-ci-backend %DOCKER_HUB_USERNAME%/backend:${gitCommitHash}"
+                        bat "wsl docker push %DOCKER_HUB_USERNAME%/frontend:${gitCommitHash}"
+                        bat "wsl docker push %DOCKER_HUB_USERNAME%/backend:${gitCommitHash}"
                     }
                 }
             }
@@ -40,8 +40,8 @@ pipeline {
                         credentialsId: 'aws-credentials', 
                         accessKeyVariable: 'AWS_ACCESS_KEY_ID', 
                         secretKeyVariable: 'AWS_SECRET_ACCESS_KEY']]) {
-                        sh 'terraform init'
-                        sh "terraform apply -auto-approve -var=\"region=${AWS_REGION}\""
+                        bat 'wsl terraform init'
+                        bat "wsl terraform apply -auto-approve -var=\"region=${AWS_REGION}\""
                     }
                 }
             }
@@ -55,8 +55,8 @@ pipeline {
                     usernamePassword(credentialsId: 'docker-hub-credentials', 
                         usernameVariable: 'DOCKER_HUB_USERNAME', passwordVariable: 'DOCKER_HUB_PASSWORD')]) {
                         script {
-                            def gitCommitHash = sh(script: 'git rev-parse --short HEAD', returnStdout: true).trim()
-                            sh "ansible-playbook -i inventory.ini deploy.yml -u \$SSH_USER --private-key \$SSH_KEY -e \"ansible_host=${EC2_IP} DOCKER_HUB_USERNAME=\$DOCKER_HUB_USERNAME GIT_COMMIT_HASH=${gitCommitHash}\""
+                            def gitCommitHash = bat(script: 'wsl git rev-parse --short HEAD', returnStdout: true).trim()
+                            bat "wsl ansible-playbook -i inventory.ini deploy.yml -u %SSH_USER% --private-key %SSH_KEY% -e \"ansible_host=${EC2_IP} DOCKER_HUB_USERNAME=%DOCKER_HUB_USERNAME% GIT_COMMIT_HASH=${gitCommitHash}\""
                         }
                     }
                 }
@@ -66,7 +66,7 @@ pipeline {
     post {
         always {
             cleanWs()
-            sh 'docker logout'
+            bat 'wsl docker logout'
         }
     }
 }
