--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,8 +1,5 @@
 [ec2]
-${EC2_IP} ansible_user=ubuntu ansible_ssh_private_key_file="/home/gayanshaminda2001/ansible/E-commerece-key-pair.pem"
+13.53.111.50 ansible_user=ubuntu ansible_ssh_private_key_file="/home/gayanshaminda2001/ansible/E-commerece-key-pair.pem"
 
 [ec2:vars]
 ansible_python_interpreter=/usr/bin/python3
-ansible_ssh_common_args='-o StrictHostKeyChecking=no'
-ansible_connection=ssh
-ansible_ssh_timeout=60
